@@ -42,6 +42,8 @@ if (!$gallery->user->canWriteToAlbum($gallery->album)) {
 <head>
   <title>Rotate/Flip Photo</title>
   <?php echo getStyleSheetLink() ?>
+  <META HTTP-EQUIV="Pragma" CONTENT="no-cache"> 
+  <META HTTP-EQUIV="expires" CONTENT="0"> 
 </head>
 <body>
 
@@ -53,19 +55,19 @@ if ($gallery->session->albumName && isset($index)) {
 	 Rotating/Flipping photo.
 	 <br>
 	 (this may take a while)
-	</center>
 <?php
 		my_flush();
                 set_time_limit($gallery->app->timeLimit);
 		$gallery->album->rotatePhoto($index, $rotate);
 		$gallery->album->save();
-		dismissAndReload();
-		return;
+		reload();
+		print "<p>Manipulate again?";
 	} else {
 ?>
 
 <center>
 How do you want to manipulate this photo?
+<?php } ?>
 <br /><br />
 <?php $args = array("albumName" => $gallery->album->fields["name"], "index" => $index); ?>
 Rotate: [ 
@@ -84,14 +86,13 @@ Rotate: [
 <?php $args["rotate"] = "fv"; ?>
 <a href=<?php echo makeGalleryUrl("rotate_photo.php", $args)?>>Vertical</a>
  ]<br /><br />
-<a href="javascript:void(parent.close())">Cancel</a>
+<a href="javascript:void(parent.close())">Close</a>
 <br />
 
 <p>
 <?php echo $gallery->album->getThumbnailTag($index) ?>
 
 <?php
-	}
 } else {
 	gallery_error("no album / index specified");
 }
