@@ -1,3 +1,13 @@
+2003-06-23  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b28
+
+	* change reload() to just call the javascript directly, rather
+	  adding a redundant <body> tag.
+
+	* Jens' suggestion to keep the rotate window open, so you
+	  can see the result of your handiwork.  I think it's pretty
+	  cool, actually, but we can always roll it back if people
+	  don't like it.
+
 2003-06-25  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b27
 
 	* Improved fetching list of albums from server anywhere from 50% to 95%.
